syntax = "proto3";

option csharp_namespace = "gRPC.Gateway.Protos";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service HunterNenService {
  rpc GetAll (google.protobuf.Empty) returns (HunterNenList) {
    option (google.api.http) = {
      get: "/api/hunternens"
    };
  }
}

message HunterNen {
  int32 id_hunter = 1;
  int32 id_nen = 2;
  float nen_level = 3;
}

message HunterNenList {
  repeated HunterNen hunter_nens = 1;
}
